Add public dashboard to list